Error Mitigation/MagiCoder/Data/java_beans_beancontext/java_beans_beancontextOutputResult.txt
Sample: BeanContextEvent_2
----------------------------------------------------------------
output:
./Data/java_beans_beancontext/javaFiles/BeanContextEvent_2.java:6: error: BeanContext is abstract; cannot be instantiated
        BeanContextEvent event = new BeanContextEvent(new BeanContext());
                                                      ^
./Data/java_beans_beancontext/javaFiles/BeanContextEvent_2.java:6: error: BeanContextEvent is abstract; cannot be instantiated
        BeanContextEvent event = new BeanContextEvent(new BeanContext());
                                 ^
2 errors


================================================================

